Fixed missing background gap issue

--- a/landing-page.css
+++ b/landing-page.css
@@ -4,8 +4,7 @@ html
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
-    min-height: 100%;
+    background-size: inherit;
 }
 
 body
